Feature(Homepage): Add styles to all the components of this container with the module

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,4 +3,7 @@
 
 @import
 'containers/reset.module',
-'containers/headerside.module.scss';
+'containers/headerside.module.scss',
+'containers/homepage.module.scss',
+'components/taskplan.module.scss',
+'components/callbook.module.scss';
