--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,5 +5,6 @@
 'containers/reset.module',
 'containers/headerside.module.scss',
 'containers/homepage.module.scss',
+'containers/footer.module.scss',
 'components/taskplan.module.scss',
 'components/callbook.module.scss';
